[package]
name = "scrcpy_launcher"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udev = "0.4.0"
mio = { version = "0.7.0", features = ["os-poll", "os-util"] }
